--- a/modality-base/modality-base-client-css/src/main/webfx/css/javafx@main.css
+++ b/modality-base/modality-base-client-css/src/main/webfx/css/javafx@main.css
@@ -25,6 +25,7 @@
     -fx-background-color: -blue-color;
     -fx-text-fill: white;
 }
+
 .primary-button:hover {
     -fx-background-color: -blue-color-hover;
 }
@@ -33,6 +34,7 @@
     -fx-background-color: -red-color;
     -fx-text-fill: white;
 }
+
 .danger-button:hover {
     -fx-background-color: -red-color-hover;
 }
@@ -84,22 +86,19 @@
     -fx-font-weight: bolder;
 }
 
-.title
-{
+.title {
   -fx-font-size: 35px;
 }
-.subtitle
-{
+
+.subtitle {
   -fx-font-size: 22px;
 }
 
-.title3
-{
+.title3 {
   -fx-font-size: 16px;
 }
 
-.title4
-{
+.title4 {
   -fx-font-size: 14px;
 }
 
@@ -111,20 +110,13 @@
 }
 
 
-.small-text
-{
+.small-text {
   -fx-font-size: 9px;
-}
-
-.table-row-cell:selected .font-blue
-{
-
 }
 
 .table-row-cell:selected {
   -fx-background: #BBBBBB;
 }
-
 
 .webfx-dates-picker-selected {
     -fx-background-color: #afe7ff;
