--- a/modality-base/modality-base-client-css/src/main/webfx/css/web@main.css
+++ b/modality-base/modality-base-client-css/src/main/webfx/css/web@main.css
@@ -26,6 +26,7 @@
 .primary-button {
     color: white;
 }
+
 .primary-button > fx-background {
     background: var(--blue-color);
 }
@@ -45,6 +46,7 @@
 .danger-button > fx-background {
     background: var(--red-color);
 }
+
 .danger-button:hover > fx-background {
     background: var(--red-color-hover);
 }
@@ -52,9 +54,11 @@
 .success-button {
     color: white;
 }
+
 .success-button > fx-background {
     background: var(--green-color);
 }
+
 .success-button:hover > fx-background   {
     background: var(--green-color-hover);
 }
@@ -62,9 +66,11 @@
 .secondary-button {
     color: white;
 }
+
 .secondary-button > fx-background {
     background: var(--grey-color);
 }
+
 .secondary-button:hover > fx-background {
     background: var(--grey-color-hover);
 }
@@ -105,10 +111,6 @@
 
 .small-text {
     font-size: 9px;
-}
-
-.table-row-cell:selected .font-blue {
-
 }
 
 .table-row-cell:selected > fx-background {
